tests/baselines/reference/typeReferenceDirectives4.errors.txt
/app.ts(4,1): error TS18056: Declaration file contains hand-written file reference directives: "ref.d.ts"


==== /app.ts (1 errors) ====
    /// <reference path="./ref.d.ts"/>
    /// <reference types="lib"/>
    
    let x: $;
    ~~~
!!! error TS18056: Declaration file contains hand-written file reference directives: "ref.d.ts"
    let y = () => x
==== /ref.d.ts (0 errors) ====
    interface $ { x }
    
==== /types/lib/index.d.ts (0 errors) ====
    declare let $: { x: number }
    
    